--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,7 +74,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Build & push BACKEND
         uses: docker/build-push-action@v5
@@ -109,7 +109,7 @@ jobs:
         env:
           PORTAINER_URL: https://app-provedor.niochat.com.br
           PORTAINER_API_KEY: ${{ secrets.PORTAINER_API_KEY }}
-          GHCR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
         run: |
           STACK_ID=1
           ESCAPED=$(cat docker-compose.yml | jq -Rs .)
